[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
futures = "0.3.28"
image = { version = "0.24.6" }
ndarray = "0.15.6"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
# tokio = { version = "1.29.1", features = ["full"] }
